[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kryptorious-jsonguard"
version = "1.1.0"
description = "JSON validator, formatter, and schema checker — catch malformed JSON before it breaks production."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Kryptorious Quantum Biosciences, Inc."}]
dependencies = ["click>=8.0", "rich>=13.0", "jsonschema>=4.0"]
[project.optional-dependencies]
dev = ["pytest>=7.0"]
[project.scripts]
jsonguard = "jsonguard.cli:main"
[project.urls]
Homepage = "https://devflow.sh"
[tool.setuptools.packages.find]
where = ["src"]
